--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
+    // 支持jsx语法
     "jsx": "react-jsx",
     // 代表将所有的cmjs的规范的默认导出 变动为es规范
-    "esModuleInterop": true , // 因为react的有些资源是通过commonjs 规范  module.exports
-  },
+    "esModuleInterop": true, // 因为react的有些资源是通过commonjs 规范  module.exports
+    // 跳过第三方库的类型检查
+    "skipLibCheck": false
+  }
 }
